# statistics

./: .gitignore
.github/workflows/: desktop-release.yml
course/: concept-map.md  merged_chapters.html  merged_chapters.md  method-selector.md  進度.md
course/chapters/: 01-descriptive-statistics.md  02-sampling-and-experiments.md  03-probability.md  04-normal-and-binomial.md  05-sampling-distributions-clt.md  06-regression.md  07-confidence-intervals.md  08-significance-tests.md  09-resampling.md  10-categorical-data.md  11-one-way-anova.md  12-multiple-comparisons.md
course/questions/: 02-sampling-and-experiments.yaml  05-sampling-distributions-clt.yaml
course/scripts/: merge_chapters.mjs
course_1/: concept-map.md  merged_chapters.md  method-selector.md  進度.md
course_1/chapters/: 01-descriptive-statistics.md  03-probability.md  04-normal-and-binomial.md  06-regression.md  08-significance-tests.md  09-resampling.md  10-categorical-data.md  11-one-way-anova.md
course_1/questions/: 01-descriptive-statistics.yaml  03-probability.yaml  06-regression.yaml  07-confidence-intervals.yaml  09-resampling.yaml  10-categorical-data.yaml  11-one-way-anova.yaml  12-multiple-comparisons.yaml
course_1/scripts/: build_handout.mjs
course_2/: course2-exam-solutions.md  course2-slides-handout.md  merged_chapters.md  references.md  進度.md  題型攻略.md
website/: .gitignore  DESKTOP.md  package-lock.json  package.json  vite.desktop.config.ts
website/src-tauri/: Cargo.toml  tauri.conf.json
website/src-tauri/icons/: icon.icns
website/src-tauri/src/: lib.rs  main.rs
(+124 files in other folders)
