[package]
name = "save-my-statistics-r"
version = "1.0.0"
description = "救救我的統計 R：給統計新手的互動求生講義"
authors = ["Juinlin Pan"]
edition = "2021"

[lib]
name = "save_my_statistics_r_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
